<resources>
    <string name="app_name">Chit Chat</string>
    <string name="email_string">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up">Or, Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">logout</string>
    <string name="add_more">Add More</string>
    <string name="refresh">Refresh</string>
    <string name="your_subscribed_channels">Your Subscribed Channels:</string>
    <string name="view">View</string>
    <string name="chit_chat">Chit Chat</string>
    <string name="done">Done</string>
</resources>
